--- a/public/index.html
+++ b/public/index.html
@@ -32,17 +32,11 @@
       crossorigin="anonymous"
     />
 
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Montserrat&family=Open+Sans&family=Raleway&display=swap"
       rel="stylesheet"
     />
 
