new calendar & react router added

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
 
-    <title>achieve</title>
+    <title>this & that</title>
   </head>
   <body>
     <noscript>we need JavaScript 😔</noscript>
